<resources>
    <string name="app_name">FirstTime</string>
    <string name="btn_text">Ir a Home</string>
    <string-array name="spinner_opcion">
        <item>España</item>
        <item>Perú</item>
        <item>Marruecos</item>
        <item>Corea del Sur</item>
    </string-array>
    <string name="iniciar_Sesion">Iniciar Sesion</string>
    <string name="edit_text_hint_email">Correo Electrónico</string>
    <string name="edit_text_hint_password">Contraseña</string>
    <string name="btn_login">Entrar</string>
    <string name="switch_notificaciones">Recibir Notificaciones</string>

    <string name="app_main">Mi Aplicacion</string>
    <string name="btn_guardar">Guardar Cambios</string>
    <string name="hint_nombre">Introduzca su nombre</string>
    <string name="titulo_bienvenida">Bienvenido</string>

    <string-array name="categories">
        <item>Tecnologia</item>
        <item>Deportes</item>
        <item>Musica</item>
        <item>Cine</item>
        <item>Viajes</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
